--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -83,15 +83,17 @@
 
 @if (Model.MeetingModels != null)
 {
-
+    
     <div class="myMeetings" style="float:right; height:500px; width:80%;">
+        @if (User.Identity.GetUserId() == Model.OtherUserID)
+        {
 
-       
             <h3>Mötesförfrågningar</h3>
 
             <p>
                 @Html.ActionLink("Skapa nytt möte", "Meeting", "Meeting")
             </p>
+
             <table class="table">
                 <tr>
                     <th>
@@ -110,7 +112,6 @@
 
                 @foreach (var item in Model.UserMeetings)
                 {
-
                     if (item.MeetingModel.MeetingActive)
                     {
                         <tr>
@@ -144,9 +145,6 @@
                                 }
                             </td>
                             <td>
-
-
-
                                 @if (item.AcceptedInvite)
                                 {
                                     @Html.ActionLink("'", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
@@ -156,82 +154,81 @@
                                     @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
 
                                 }
-
                             </td>
                         </tr>
                     }
-                
-                 }
-
+                }
             </table>
 
-            <h3>Kommande möten</h3>
+        }
 
-            <table class="table">
+        <h3>Kommande möten</h3>
+
+        <table class="table">
+            <tr>
+                <th>
+                    @Html.DisplayName("Titel")
+                </th>
+                <th>
+                    @Html.DisplayName("Beskrivning")
+                </th>
+                <th>
+                    @Html.DisplayName("Startdatum")
+                </th>
+                <th>
+                    @Html.DisplayName("Slutdatum")
+                </th>
+            </tr>
+
+            @foreach (var item in Model.MeetingModels)
+            {
                 <tr>
-                    <th>
-                        @Html.DisplayName("Titel")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Beskrivning")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Startdatum")
-                    </th>
-                    <th>
-                        @Html.DisplayName("Slutdatum")
-                    </th>
-                </tr>
+                    <td>
+                        @Html.DisplayFor(model => item.MeetingTitle)
+                    </td>
+                    <td>
+                        @Html.DisplayFor(modelItem => item.MeetingDesc)
+                    </td>
+                    <td>
+                        @Html.ValueFor(modelItem => item.MeetingStartDate, "{0:yyyy-MM-dd HH:mm}")
 
-                @foreach (var item in Model.MeetingModels)
-                {
-                    <tr>
-                        <td>
-                            @Html.DisplayFor(model => item.MeetingTitle)
-                        </td>
-                        <td>
-                            @Html.DisplayFor(modelItem => item.MeetingDesc)
-                        </td>
-                        <td>
-                            @Html.ValueFor(modelItem => item.MeetingStartDate, "{0:yyyy-MM-dd HH:mm}")
+                    </td>
+                    <td>
+                        @Html.ValueFor(modelItem => item.MeetingEndDate, "{0:yyyy-MM-dd HH:mm}")
+                    </td>
+                    <td>
 
-                        </td>
-                        <td>
-                            @Html.ValueFor(modelItem => item.MeetingEndDate, "{0:yyyy-MM-dd HH:mm}")
-                        </td>
-                        <td>
-
-                            @if (item.MeetingActive)
-                            {
-                                if (DateTime.Now > item.MeetingStartDate && DateTime.Now < item.MeetingEndDate)
-                                {
-                                    @Html.DisplayName("Pågående")
-                                }
-                                else
-                                {
-                                    @Html.DisplayName("Kommande")
-                                <td>
-                                    @if (item.MeetingUserID == User.Identity.GetUserId())
-                                    {
-
-                                        @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId = item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
-
-                                    }
-                                </td>
-                            }
-                        }
-                        else
+                        @if (item.MeetingActive)
                         {
-                            @Html.DisplayName("Avslutat/Inställt")
+                            if (DateTime.Now > item.MeetingStartDate && DateTime.Now < item.MeetingEndDate)
+                            {
+                                @Html.DisplayName("Pågående")
+                            }
+                            else
+                            {
+                                @Html.DisplayName("Kommande")
+                            <td>
+                                @if (item.MeetingUserID == User.Identity.GetUserId() && User.Identity.GetUserId() == Model.OtherUserID)
+                                {
+
+                                    @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId = item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
+
+                                }
+                            </td>
                         }
-
-
-                        </tr>
+                    }
+                    else
+                    {
+                        @Html.DisplayName("Avslutat/Inställt")
                     }
 
-            </table>
-        </div>
-}
+
+                    </tr>
+                }
+
+        </table>
+    </div>
+    }
 
 
 @if (User.Identity.GetUserId() == Model.OtherUserID)
