--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -12,17 +12,16 @@
     </div>
     <br />
 
-    if (Model.userId != Model.FollowedID)
+    if (Model.userId != Model.OtherUserID)
     {
         if (Model.UserIsFollowed == "")
         {
 
-
-            <input type="button" class="followBtn" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
+            <input type="button" class="btn btn-success" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
         }
         else
         {
-            <input type="button" class="followBtn" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowUser", "Following", new { unfollowID = Model.FollowedID })'" />
+            <input type="button" class="btn btn-danger" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowUser", "Following", new { unfollowID = Model.FollowedID })'" />
         }
     }
 
@@ -147,7 +146,7 @@
                         }
                         else
                         {
-                            @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID});
+                            @Html.ActionLink("Acceptera", "AcceptMeeting", new { meetingId = item.MeetingModel.MeetingID });
 
                         }
                     </td>
@@ -207,10 +206,10 @@
                         }
                     </td>
                     <td>
-                        @if(item.MeetingUserID == User.Identity.GetUserId())
+                        @if (item.MeetingUserID == User.Identity.GetUserId())
                         {
-                            
-                        @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId=item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
+
+                            @Html.ActionLink("Ställ in möte", "CancelMeeting", new { meetingId = item.MeetingID, title = item.MeetingTitle, startDate = item.MeetingStartDate })
 
                         }
                     </td>
@@ -248,28 +247,55 @@
 
 @if (User.Identity.GetUserId() == Model.OtherUserID)
 {
-    <div style="float:left;">
-        @using (Html.BeginForm("ChosenNotifications", "ChooseNotification", FormMethod.Post, new { enctype = "multipart/form-data" }))
-        {
-            <h4 style="font-weight:bold;">Kategorier</h4>
-            foreach(var item in Model.ListCategories)
-            { 
-            <p>
-                @Html.CheckBoxFor(m => Model.FollowCategory, "true")
-            </p>
-            }
+    <div id="myModal" class="modal fade" role="dialog">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <button type="button" class="close" data-dismiss="modal">&times;</button>
+                    <h4 class="modal-title">Kategorier</h4>
+                </div>
+                <div class="modal-body row">
 
-            <input type="submit" id="submitBtn" class="btn btn-default" value="Ändra Notifikationer" />
-        }
+
+                    @foreach (var item in Model.ListCategories)
+                    {
+                        if (item.CategoryName != "Okategoriserade")
+                        {
+
+                        <div class="col-lg-2" style="margin-bottom:10px">
+
+                            <strong>@item.CategoryName</strong>
+                            @if (!Model.IsFollowed.Any(i => i.FollowCategoryID == item.CategoryID))
+                            {
+                                <input type="button" class="btn btn-success" value="Följ" onclick="location.href = '@Url.Action("FollowCategory", "Following", new { categoryID = item.CategoryID })'" />
+                            }
+                            else
+                            {
+                                <input type="button" class="btn btn-danger" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowCategory", "Following", new { categoryID = item.CategoryID })'" />
+                            }
+
+                        </div>
+                        }
+                    }
+                    
+
+                </div>
+                <div class="modal-footer">
+                    <button type="button" class="btn btn-default" data-dismiss="modal">Stäng</button>
+                </div>
+            </div>
+        </div>
     </div>
+    <button type="button" style="float:left" class="btn btn-default" data-toggle="modal" data-target="#myModal">Följ kategorier</button>
 }
 
 
-@section scripts{
-    <script>
-        $("#submitBtn").click(function () {
-            alert("Dina notifikationsval har ändrats.")
-        });
 
-    </script>
-}
+    @section scripts{
+        <script>
+            $("#submitBtn").click(function () {
+                alert("Dina notifikationsval har ändrats.")
+            });
+
+        </script>
+    }
