Gjort lite smått och gott

--- a/OruBloggen/Views/Account/Register.cshtml
+++ b/OruBloggen/Views/Account/Register.cshtml
@@ -10,7 +10,7 @@
 
 {
     @Html.AntiForgeryToken()
-    <h4>Create a new account.</h4>
+    <h4>Skapa ett nytt konto.</h4>
     <hr />
     @Html.ValidationSummary("", new { @class = "text-danger" })
     <div class="form-group">
