--- a/OruBloggen/Views/ProfilePage/showInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/showInfo.cshtml
@@ -14,7 +14,7 @@
     <div>
         <dl style="float:left;">
             <dt>
-                @Html.DisplayNameFor(model => model.Firstname)
+                Förnamn
             </dt>
 
             <dd>
@@ -22,7 +22,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Lastname)
+                Efternamn
             </dt>
 
             <dd>
@@ -30,7 +30,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Position)
+                Befattning
             </dt>
 
             <dd>
@@ -39,7 +39,7 @@
 
 
             <dt>
-                @Html.DisplayNameFor(model => model.Email)
+                E-post
             </dt>
 
             <dd>
@@ -47,7 +47,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.PhoneNumber)
+                Telefonnummer
             </dt>
 
             <dd>
@@ -55,7 +55,7 @@
             </dd>
 
             <dt>
-                @Html.DisplayNameFor(model => model.Team)
+                Arbetslag
             </dt>
 
             <dd>
