--- a/OruBloggen/Views/Admin/AllUsers.cshtml
+++ b/OruBloggen/Views/Admin/AllUsers.cshtml
@@ -83,7 +83,7 @@
 
                                 <div class="modal-footer">
                                     <button type="submit" class="btn btn-default">Spara ändringar</button>
-                                    @*<a class="btn btn-default" href="/Admin/RemoveUser?id=@item.UserID" style="float:left;">Ta bort användare</a>*@
+                                    <a class="btn btn-default" href="/Admin/RemoveUser?id=@item.UserID" style="float:left;">Ta bort användare</a>
                                 </div>
                             }
                         </div>
