--- a/OruBloggen/Views/AllUsers/ShowAllUsers.cshtml
+++ b/OruBloggen/Views/AllUsers/ShowAllUsers.cshtml
@@ -3,9 +3,12 @@
     ViewBag.Title = "ShowAllUsers";
 }
 
-<h2>Alla användare</h2>
+<h3>Hitta personal</h3>
 @using (Html.BeginForm("ShowAllUsers", "AllUsers", FormMethod.Post))
 {
+    
+    <input class="form-control" type="text" id="searchString" autocomplete="off" placeholder="Sök användare/arbetslag" style="margin-top:10px; margin-bottom:10px"/>
+
     <link rel="stylesheet" type="text/css" href="~/Content/Site.css" />
     <table class="table textSize">
 
@@ -27,3 +30,26 @@
         </tbody>
     </table>
 }
+@section Scripts {
+<script>
+    $(function () {
+        $(document)
+            .on("input", "#searchString", function () {
+                listUsers();
+            })
+
+        function listUsers() {
+            $.ajax({
+                url: '/AllUsers/ListSearchedUsers',
+                type: "get",
+                dataType: "json",
+                data: { searchString: $("#searchString").val() },
+                success: function (data) {
+                    $("#trhover").remove();
+                    $("#trhover").append(data);
+                }
+            });
+        }
+    });
+</script>
+    }
