--- a/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
+++ b/OruBloggen/Views/ProfilePage/ShowInfo.cshtml
@@ -227,8 +227,26 @@
                 }
 
         </table>
-    </div>
-    }
+                
+                @if (Model.userId != Model.FollowedID)
+                {
+                    if (Model.UserIsFollowed == "")
+                    {
+                        
+                            <input type="button" value="Följ" onclick="location.href = '@Url.Action("FollowUser", "Following", new { followID = Model.FollowedID })'" />
+                        
+                    }
+                    else
+                    {
+                        
+                            <input type="button" value="Avfölj" onclick="location.href = '@Url.Action("UnfollowUser", "Following", new { unfollowID = Model.FollowedID })'" />
+                        
+                    }
+                }
+
+        </div>
+    
+}
 
 
 @if (User.Identity.GetUserId() == Model.OtherUserID)
