--- a/OruBloggen/Content/Site.css
+++ b/OruBloggen/Content/Site.css
@@ -49,20 +49,22 @@ textarea {
 }
 
 .images {
-    width: 100px;
-    height: 100px;
+    width: 50px;
+    height: 50px;
     background: #FFFFFF;
     margin: auto;
     -moz-border-radius: 60px;
     border-radius: 100px;
-    padding: 6px;
-    box-shadow: 0px 0px 20px #888;
+    /*padding: 6px;*/
+    /*box-shadow: 0px 0px 20px #888;*/
 }
+
 
 .hover tr:hover
 {
     background-color: #888;
-    Color: white;
+    Color: black;
+    cursor: pointer;
 }
 .textSize
 {
@@ -193,3 +195,45 @@ body > div.container.body-content > form > div > div:nth-child(8) {
     border-radius: 5px;
 }
 
+#myInput {
+    background-image: url('/css/searchicon.png'); 
+    background-position: 10px 12px; 
+    background-repeat: no-repeat; 
+    width: 200px;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    font-size: 16px; 
+    padding: 6px; 
+    border: 1px solid #ddd; 
+    margin-bottom: 12px; 
+    margin-top: 20px;
+    border-radius: 25px;
+    text-align : center;
+}
+
+input {
+    outline: none;
+}
+
+#myTable {
+    border-collapse: collapse; 
+    width: 100%;
+    border: 1px solid #ddd; 
+    font-size: 18px; 
+}
+
+    #myTable th, #myTable td {
+        text-align: left; 
+        /*padding: 12px;*/ 
+    }
+
+    #myTable tr {
+        
+        border-bottom: 1px solid #ddd;
+    }
+
+        #myTable tr.header, #myTable tr:hover {
+            /* Add a grey background color to the table header and on hover */
+            background-color: #f1f1f1;
+        }
