--- a/OruBloggen/Views/Project/Project.cshtml
+++ b/OruBloggen/Views/Project/Project.cshtml
@@ -166,6 +166,35 @@
                                         <a href="/ProjectFiles/@file.FilePath" download>@file.FilePath</a><br />
                                     }
                                 }
+
+                                <hr />
+                                <div id="commentProject">
+                                        <textarea style="width:100%; max-width:none;" id="comment_@project.ProjectID"></textarea>
+                                        <button type="button" class="btn btn-default" onclick="sendComment(@project.ProjectID)" style="float:right;">Skicka kommentar</button>
+                                </div>
+                                <div style="margin-left:5px; margin-top:40px;">
+                                    <div id="comments_@project.ProjectID">
+
+                                    </div>
+                                    @foreach (var comment in project.ProjectComments)
+                                    {
+                                    <div id="@comment.CommentID">
+                                        <h5 style="margin-bottom: 2px;"><b>@comment.UserCommentName</b></h5>
+                                        <p style="word-wrap:break-word;">@comment.Comment</p>
+                                        <div>
+                                        <p style="font-size:xx-small; margin-top:5px; float:left;">@comment.CommentDate</p> &nbsp;
+                                        @if (comment.UserCommentID == User.Identity.GetUserId() || project.ProjectCreatorID == User.Identity.GetUserId())
+                                        {
+                                            <a class="close" style="float:left; font-size: xx-small; cursor:pointer; margin-top: 7px; margin-left:5px;" onclick="removeComment(@comment.CommentID)">Ta bort kommentar</a>
+                                        }
+                                        </div>
+                                    </div>
+
+                                    }
+                                </div>
+
+
+
                             </div>
                             <div class="modal-footer">
                                 <button id="button" type="button" class="btn btn-default" data-dismiss="modal">Stäng</button>
@@ -173,7 +202,7 @@
                         </div>
                     </div>
                 </div>
-            }
+                                    }
         </tbody>
     </table>
 
@@ -214,7 +243,43 @@
                 confirm("Vill du verkligen ta bort projektet?");
                 document.location.href = '/Project/RemoveProject?projectID=' + id;
             };
-            
 
+            function sendComment(projectID) {
+                var textAreaID = "#comment_" + projectID;
+                var comment = $(textAreaID).val();
+                $.ajax({
+                    type: "POST",
+                    url: "/Project/CommentProject?projectID=" + projectID + "&comment=" + comment,
+                    success: function (name) {
+                        var id = "#comments_" + projectID;
+                        var day = new Date($.now()).getDate();
+                        var month = new Date($.now()).getMonth() + 1;
+                        var year = new Date($.now()).getFullYear();
+                        var hour = new Date($.now()).getHours();
+                        var minutes = new Date($.now()).getMinutes();
+                        var seconds = new Date($.now()).getSeconds();
+                        var date = year + "-" +0+month + "-" + day + " " + hour + ":" + minutes + ":" + seconds;
+
+                        var html = "<h5 style='margin-bottom: 2px;'><b>" + name + "</b></h5><p style='word-wrap:break-word;'>" + comment + "</p><p style='font-size:xx-small; margin-top:5px;'>" + date + "</p>";
+                        $(id).append(html);
+
+                        $(textAreaID).val("");
+                    }
+
+                });
+            };
+
+            function removeComment(commentID) {
+                var comment = "#" + commentID;
+                $(comment).fadeOut("slow");
+
+                $.ajax({
+                    url: '/Project/RemoveComment?commentID=' + commentID,
+                    success: function (ev) {
+                        ev.preventDefault();
+                    }
+                });
+            };
+           
         </script>
     }
